
  *) [TS-1037] Fix for computing local machine address (was ignoring
   general addresses).

  *) [TS-1030] Improve hashing mechanism on WKS.

  *) [TS-1028] Avoid triggering assert when running debug build and enabling
   per-thread connection pols

  *) [TS-1021] Remove extra newline from binary logs.

  *) [TS-1022] Use size specific types for serialized data in binary logs.

Changes with Apache Traffic Server 3.1.1
  *) [TS-1020] Make logging to a named pipe work on Solaris.

  *) [TS-1016] Make the update frequency for stats configurable.

  *) [TS-944] Align all configurations of paths to use the same function

  *) [TS-1018] Remove obsolete OpenSSL acceleration code and configs

  *) [TS-1013] Allow ssl_multicert.config to support CA chains per host

  *) [TS-971] make cache evacuate work as expect.

  *) [TS-982] Fixed PluginVC set active/passive address. Clarified that
   it expects host order input.

  *) [TS-1012] Eliminate proxy.config.http.append_xforwards_header, which
   is never used.
 
  *) [TS-1004] Transformation plugins cause connection close when content
   length is not known ahead. Author: Otto van der Schaaf.

  *) [TS-1011] Fixes for OpenSSL, specifically triggered for Solaris, but
   generally broken assumptions in the old code.

  *) [TS-989] Logging is now IPv6 compatible.

  NOTE: IP addresses are now encoded as a specific type of binary
  data, not a mix of unsigned ints and strings. This is a log binary
  format change and therefore WILL BREAK ACCESS TO LOG DATA FROM
  PREVIOUS VERSIONS.

  *) [TS-1009] Disable starting ICP continuations if ICP is not enabled.

  *) [TS-1005] Use traffic_line for reload option with RC script.
   Author: Jan-Frode Myklebust.

  *) [TS-984] Log roll crash fixed.

  *) [TS-997] ATS crashes on remap plugin initialization failure.
   Author: Manjesh Nilange.

  *) [TS-988] Updated ICP for IPv6.

  *) [TS-994] Removed the extra splace from X-Forwarded-For.
